NetworkPolicy/egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
spec:
  podSelector:
    matchLabels:
      name: internal
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    - podSelector:
          matchLabels:
            name: mysql
    - podSelector:
          matchLabels:
            name: payroll
    ports:
    - protocol: TCP
      port: 3306
   - protocol: TCP
     port: 8080
